--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -49,3 +49,12 @@ build:
             manual: 
                 - src: 'src/**/*.ts'
                   dest: .
+        - image: stephengrider/payments
+          context: payments
+          docker:
+            dockerfile: Dockerfile
+          sync:
+            manual:
+              - src: 'src/**/*.ts'
+                dest: .
+              
